[package]
name = "ember-plus-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
asn1-rs = "0.7.1"
miette = "7.6.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "io-util",
    "net",
    "rt",
    "sync",
    "time",
    "macros",
] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = "0.3.20"

[build-dependencies]
rasn-compiler = "0.14.2"
