[package]
name = "ember-plus-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = "7.6.0"
rasn = "0.27.3"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "io-util",
    "net",
    "rt",
    "sync",
    "time",
    "macros",
] }
tokio-util = "0.7.16"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = "0.3.20"
