[package]
name = "ember-plus-rs"
version = "0.1.0"
edition = "2024"

[features]
tracing = ["dep:tracing"]
default = ["tracing"]

[dependencies]
miette = "7.6.0"
rasn = "0.27.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "io-util",
    "net",
    "rt",
    "sync",
    "time",
    "macros",
] }
tokio-util = "0.7.16"
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
supports-color = "3.0.2"
worterbuch-client = "1.3.8"
